--- a/index.qmd
+++ b/index.qmd
@@ -89,3 +89,11 @@ Tutorial 3: Please visit Google Classroom to view the tasks for the tutorials on
 Tutorial 4: June 26, 2024 from 3.15PM to 4PM.
 
 Task: Week 7 slides 28-29 questions.
+
+### Week 11: July 3, 2024
+
+**Slides 10:** [More work on summary measures](./week10/index.html)
+
+Tutorial 4: July 3, 2024 from 3.15PM to 4PM.
+
+Please go to the Google Classroom to view the tasks.
