--- a/week10/index.qmd
+++ b/week10/index.qmd
@@ -17,12 +17,9 @@ format:
       data-background-image: none
 ---
 
-
-
-
 ## Variance of a sample
 
-The variance of a sample of `n` observations $x_1, x_2, x_3,..,x_n$ having mean $\bar{x}$ is defined as 
+The variance of a sample of `n` observations $x_1, x_2, x_3,..,x_n$ having mean $\bar{x}$ is defined as
 
 $$s^2 = \frac{\sum_{i=1}^n(x_i - \bar{x})^2}{n-1}$$
 
@@ -30,18 +27,17 @@ Alternatively, the sample variance can be written in the following forms:
 
 $$s^2 = \frac{1}{n-1}[\sum_{i=1}^n x_i^2 - \frac{(\sum_{i=1}^nx_i)^2}{n}]$$
 
-or 
+or
 
-$$s^2 = \frac{1}{n-1}[\sum_{i=1}^nx_i^2-n\bar{x}]$$
----
+## $$s^2 = \frac{1}{n-1}[\sum_{i=1}^nx_i^2-n\bar{x}]$$
 
 ## Measures of relative standing/ Measures of noncentral location
 
-- Quartiles
+-   Quartiles
 
-- Percentiles
+-   Percentiles
 
----
+------------------------------------------------------------------------
 
 ## Quantiles
 
@@ -55,7 +51,7 @@ Q3 - third (upper) quantile
 
 > First quantile
 
-The value which 25% of the observations are smaller and 75% are larger 
+The value which 25% of the observations are smaller and 75% are larger
 
 $$Q_1 = \frac{n+1}{4} \text{ ordered observation}$$
 
@@ -63,32 +59,29 @@ $$Q_1 = \frac{n+1}{4} \text{ ordered observation}$$
 
 Same as median
 
-> Third quantile 
+> Third quantile
 
 The value for which 75% of the observations are smaller and 25% are larger
 
 $$Q_3 = \frac{3(n+1)}{4} \text{ ordered observation}$$
 
-
 ## Rules
 
-1. If the resulting positioning point is an integer, take the particular value corresponding to that positioning point.
+1.  If the resulting positioning point is an integer, take the particular value corresponding to that positioning point.
 
-2. For a non-integer position 
-$p$, let $k$ be the integer part and $d$ be the fractional part (e.g., for 
-$p=2.75$, $k=2$ and $d=0.75$)
+2.  For a non-integer position $p$, let $k$ be the integer part and $d$ be the fractional part (e.g., for $p=2.75$, $k=2$ and $d=0.75$)
 
 $$Q_q = (1-d) \text{ value at position }k + d.\text{ value at position }k+1$$
 
 > Your turn
 
-Find quantiles for 
+Find quantiles for
 
 1,3,4,6,7,8,10,12,14,15
 
 ## Percentiles
 
-- Percentiles divides a given ordered data array into 100 equal parts, it divides the complete data set into hundred groups of 1% each. There are total of 99 percentiles denoted as P1, P2, P3,…, and, P99, and they are known as 1st percentile, 2nd percentile,…., 99th percentile respectively.
+-   Percentiles divides a given ordered data array into 100 equal parts, it divides the complete data set into hundred groups of 1% each. There are total of 99 percentiles denoted as P1, P2, P3,…, and, P99, and they are known as 1st percentile, 2nd percentile,…., 99th percentile respectively.
 
 first decile = 10th percentile
 
@@ -108,7 +101,7 @@ $$L_p = (n+1)\frac{p}{100}$$
 
 where $L_p$ is the location of the $p^{th}$ percentile.
 
----
+------------------------------------------------------------------------
 
 ## Your turn
 
@@ -118,20 +111,18 @@ Find $L_{25}$, $L_{50}$ and $L_{75}$.
 
 ## Interquartile Range (IQR)
 
-- Measure of dispersion
+-   Measure of dispersion
 
 $$IQR = Q_3 - Q_1$$
 
-- Measure considers the spread in the middle 50% of the data.
+-   Measure considers the spread in the middle 50% of the data.
 
-- Not influenced by extreme values.
-
+-   Not influenced by extreme values.
 
 ## Box and whisker Plot
 
 ::: columns
 ::: {.column width="50%"}
-
 ```{r, echo=FALSE}
 library(ggplot2)
 a <- c(1, 3, 4, 7, 8, 8, 9, 10, 11, 2, 5, 6, 4, 7, 3, 2, 2, 20, 20, 30)
@@ -145,16 +136,11 @@ summary(a)
 ```
 
 **Let's draw the box and whisker plot**
-
 :::
-  
+
 ::: {.column width="50%"}
-
-
-
 :::
 :::
-  
 
 ## Data
 
@@ -199,11 +185,10 @@ df[68:100, ] |> knitr::kable() |> kable_styling(font_size = 18)
 :::
 :::
 
----
+------------------------------------------------------------------------
 
 ::: columns
 ::: {.column width="50%"}
-
 **Histogram**
 
 ```{r, comment=NA, message=FALSE, echo=FALSE, fig.height=10}
@@ -213,11 +198,9 @@ geom_histogram(aes(fill = dist), colour = "black") +
 coord_cartesian(xlim = c(-3, 6)) + 
 facet_wrap(~ dist) 
 ```
-
 :::
 
 ::: {.column width="50%"}
-
 **Box and whisker Plot**
 
 ```{r, comment=NA, message=FALSE, echo=FALSE, fig.height=10}
@@ -234,32 +217,112 @@ Prices of Chocolate in Rupees (LKR):
 
 50, 75, 100, 125, 150, 175, 200, 225, 250, 275
 
-
 Prices of Chocolate in USD:
 
 5, 7, 9, 12, 15, 18, 20, 23, 26, 0
 
 Which group of chocolate prices exhibits the highest variation?
 
----
+------------------------------------------------------------------------
 
 ## Coefficient of variation
 
-- Relative measure of variation
+-   Relative measure of variation
 
-- It always expressed as a percentage rather than in terms of the units of the particular data.
+-   It always expressed as a percentage rather than in terms of the units of the particular data.
 
-- This is useful when comparing two or more sets of data that are measured in the different units.
+-   This is useful when comparing two or more sets of data that are measured in the different units.
 
 $$CV = \frac{s}{\bar{x}}\times 100\%$$
 
 # Measures of shape
 
----
+------------------------------------------------------------------------
 
 ## Skewness and the relationship of the mean, median and mode
 
-In-class diagram: 
+In-class diagram:
 
 
 
+---
+
+## Skewness
+
+- Skewness is the degree of asymmetry of a distribution. 
+
+- If the frequency distribution has a longer “tail” to the right of the central maximum than to the left, the distribution is said to be skewed to the right (or to have a positive skewness). 
+
+- If the reverse is true, it is said to be skewed to the left (or to have a negative skewness)
+
+> Pearson's first coefficient of skewness
+
+$$\text{Skewness} = \frac{\text{mean}-\text{mode}}{\text{standard deviation}}$$
+
+or 
+
+> Pearson's second coefficient of skewness
+
+To avoid using the mode
+
+$$\text{Skewness} = \frac{3(\text{mean}-\text{median})}{\text{standard deviation}}$$
+
+---
+
+## Conditions
+
+1. $Mean = Mode = Median$, then the coefficient of skewness is zero for symmetrical distribution.
+
+
+2. $Mean > Mode$, then the coefficient of skewness will be positive.
+
+
+3. $Mean < Mode$, then the coefficient of skewness will be negative.
+
+Karl person`s coefficient of skewness has a positive sign for the positively skewed and a negative sign for the negatively skewed.
+
+---
+
+## Empirical relationship between mean, median and mode
+ 
+Using Karl Pearson’s formula we can show
+
+$3 (median) = mode + 2 mean$
+
+---
+
+##
+
+1. **Symmetric**
+
+$Mean = Median = Mode$
+
+2. **Positively Skewed**
+
+$Mean > Median > Mode$
+
+3. **Negatively Skewed**
+
+$Mean < Median < Mode$
+
+---
+
+## Kurtosis
+
+- Degree of peakness of a distribution
+
+- Usually taken relative to a normal distribution
+
+```{r}
+Type <- c("Mesokurtic", "Leptokurtic", "Platykurtic")
+Kurtosis <- c("=3", ">3", "<3")
+Ek <- c("=0", ">0", "<0")
+ts <- tibble(Type=Type, Kurtosis=Kurtosis, `Excess Kurtosis`=Ek)
+ts |> knitr::kable()
+```
+
+Excess Kurtosis = Kurtosis - 3
+
+## Your turn
+
+Find kurtosis and excess kurtosis formula
