--- a/ia.qmd
+++ b/ia.qmd
@@ -31,7 +31,7 @@ The aim of this assignment is to develop your data analysis and presentation ski
 All charts, tables, and interpretations must be hand-drawn. Ensure they are clear, well-labeled, and accurately represent your findings.
 
 
-**3.** Prepare a research poster
+**3. Prepare a research poster**
 
 - Your poster should be A1 size and include the following sections:
 
@@ -76,6 +76,43 @@ Clearly mention your index number and name.
 
 July 21, 2024
 
+It is the student’s responsibility to manage their time effectively to ensure that they have enough time to complete the assignment within the given timeframe. This includes allocating enough time to research, plan, and write the assignment, as well as allowing for unexpected circumstances or delays. It
+is important for students to plan their workload and prioritize their assignments to ensure that they are able to complete them on time and to the best of their ability.
+
+**Late submission:** Submitting late work will be penalized by 1 mark per day. I will not accept any submissions after July 25, 2024.
+
+**Extensions will be made in exceptional
+circumstances only.**
+
+## Requesting a deadline extension
+
+
+
+> You are allowed to apply for a deadline extension for the assignment under the following conditions only.
+
+**Category A**
+
+An illness that requires the student to miss all of his or her classes for 2 days or more.
+
+**Category B**
+
+A period of grief for the loss of a family member or friend.
+
+**Category C**
+
+A family emergency.
+
+Valid documentation of proof is required **prior** to the assignment deadline.
+
+
+The philosophy driving our late policy has three goals
+
+- Keep things fair.
+
+- Encourage good time management.
+
+- Encouragement and appreciation of on-time submission students.
+
 **You have been given a 11 days timeframe to complete the assignment. Please begin work promptly to accommodate any unforeseen circumstances.**
 
 
@@ -86,3 +123,5 @@ If you have any questions or require further clarification, please feel free to 
 First help desk session will be held on July 10, 2024 from 3.15pm to 4.00pm.
 
 If you need any additional support, please send an email to statdemos\@sci.sjp.ac.lk and reserve a time for a meeting (weekdays only between 8 a.m. and 4 p.m.).
+
+
