--- a/index.qmd
+++ b/index.qmd
@@ -104,6 +104,9 @@ Please go to the Google Classroom to view the tasks.
 
 **Slides 11:** [Covariance and Correlation](./week11/index.html)
 
+
+**Slides 12:** [Time Series Visualisations](./week12/index.html)
+
 Help Desk (Assignment 2): July 7, 2024 from 3.15PM to 4PM.
 
 Please go to the Google Classroom/LMS to view the assignment.
