--- a/index.qmd
+++ b/index.qmd
@@ -100,13 +100,18 @@ Tutorial 4: July 3, 2024 from 3.15PM to 4PM.
 
 Please go to the Google Classroom to view the tasks.
 
-### Week 12: July 7, 2024
+### Week 12: July 10, 2024
 
 **Slides 11:** [Covariance and Correlation](./week11/index.html)
 
-
 **Slides 12:** [Time Series Visualisations](./week12/index.html)
 
-Help Desk (Assignment 2): July 7, 2024 from 3.15PM to 4PM.
+Help Desk (Assignment 2): July 10, 2024 from 3.15PM to 4PM.
 
 Please go to the Google Classroom/LMS to view the assignment.
+
+### Week 13: July 17, 2024
+
+**Slides 13:** [Spearman's rank correlation](./week13/index.html)
+
+Help Desk (Assignment 2): July 17, 2024 from 3.15PM to 4PM.
