--- a/index.qmd
+++ b/index.qmd
@@ -115,3 +115,9 @@ Please go to the Google Classroom/LMS to view the assignment.
 **Slides 13:** [Spearman's rank correlation](./week13/index.html)
 
 Help Desk (Assignment 2): July 17, 2024 from 3.15PM to 4PM.
+
+### Week 14: July 24, 2024
+
+**Slides 14:** [Measures of Central Tendency and Variability: Grouped Data](./week14/index.html)
+
+**Slide 15**[Misuses of Statistics](./week15/index.html)
